# mapfish

./: README.md  pyproject.toml
src/: ui.py
src/flakeframe/: __init__.py  geocode.py  geocode_nominatim_old.py  main.py  mapview.py  theme.py  ui.py  ui.txt  weather.py
src/mapfisher/: geocode.py  input.py  main.py  map.py  mapview.py  ui.py  ui.txt  weather.py
