[project]
name = "flakeframe"
version = "0.1.2"
description = "Command line weather app with a fancy map display"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "py-staticmaps >= 0.4.0",
    "pillow >= 12.0.0",
    "img2unicode >= 0.1a11"
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[project.scripts]
flakeframe = "flakeframe.main:entry"

[tool.setuptools.packages.find]
where = ["src"]
